# openstreetmap-api-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: example.yml  main.yml
example/: Cargo.toml
example/src/: main.rs
src/: errors.rs  lib.rs  types.rs  versions.rs
src/api/: capabilities.rs  changeset.rs  changesets.rs  elements.rs  gps.rs  map.rs  mod.rs  notes.rs  permissions.rs  user.rs  versions.rs
src/types/: gpx.rs  mod.rs
tests/: types_test.rs
tests/api/: capabilities_test.rs  changeset_test.rs  changesets_test.rs  elements_test.rs  gps_test.rs  map_test.rs  mod.rs  notes_test.rs  permissions_test.rs  user_test.rs  versions_test.rs
tests/api/utils/: mod.rs
