[package]
name = "openstreetmap-api"
version = "0.1.2"
authors = ["Daniele Esposti"]
license = "MIT"
description = "Rust client for the OpenstreetMap API."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
log = "0.4"
quick-xml = { version = "0.22", features = ["serialize"] }
serde_derive = "1.0"
url = "2.2"
serde_urlencoded = "0.7"

[dev-dependencies]
wiremock = "0.5.10"
actix-rt = "2.6.0"
pretty_assertions = "1.0"
rstest = "0.12"
