[package]
name = "openstreetmap-api"
version = "0.3.2"
authors = ["Daniele Esposti"]
license = "MIT"
description = "Rust client for the OpenstreetMap API."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
quick-xml = { version = "0.27", features = ["serialize"] }
serde_derive = "1.0"
url = "2.2"
serde_urlencoded = "0.7"
urlencoding = "2.1.0"

[dev-dependencies]
wiremock = "0.6.1"
actix-rt = "2.6.0"
pretty_assertions = "1.0"
rstest = "0.22"
